--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 .pixel {
     height: 25px;
     width: 25px;
-    border: 1px dotted black;
+    border: 1px dotted #999999;
     box-sizing: border-box;
     background-color: white;
 }
@@ -21,14 +21,16 @@ body {
 
 .snake {
     background-color: black;
+    border-radius: 30%;
 }
 
-.deadSnake {
-    background-color: red;
+.prey {
+    background-color: brown;
     border-color: red;
 }
 
 .apple {
     background-color: red;
+    border-radius: 50%;
 }
 
