obstacles can no longer be dropped on edges, items can't drop on other items

--- a/style.css
+++ b/style.css
@@ -24,9 +24,9 @@ body {
     border-radius: 30%;
 }
 
-.prey {
-    background-color: brown;
-    border-color: red;
+.obst {
+    background-color: #3F3F9F;
+    border-color: silver;
 }
 
 .apple {
