--- a/style.css
+++ b/style.css
@@ -1,5 +1,12 @@
 body {
+    display: grid;
+    grid-template-rows: 50px 800px;
+    grid-template-columns: 800px 300px;
 
+}
+
+#header {
+    grid-column: span 2;
 }
 
 #board {
@@ -8,6 +15,44 @@ body {
     border: 1px solid black;
     display: flex;
     flex-wrap: wrap;
+    margin: 25px
+}
+
+#interface {
+    display: grid;
+    grid-template-rows: 100px 100px 600px;
+}
+
+#scoreBoard {
+    border: 1px solid black;
+    margin: 25px 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px;
+}
+
+#score {
+    border: 1px solid black;
+    width: 150px;
+    padding-left: 10px;
+}
+
+#buttonsArea {
+    display: flex;
+    justify-content: space-around;
+}
+
+.interfaceButton {
+    width: 120px
+}
+
+#play {
+    background-color: green;
+}
+
+#reset {
+    background-color: gray;
 }
 
 .pixel {
