--- a/style.css
+++ b/style.css
@@ -20,8 +20,9 @@ body {
 #header {
     grid-column: span 2;
     margin-left: 50px;
-
     font-size: 20px;
+    font-family: 'Acme', sans-serif;
+    letter-spacing: 4px;
 }
 
 #board {
@@ -45,9 +46,10 @@ body {
 
 #interface {
     display: grid;
-    grid-template-rows: 200px 100px 500px;
-    border: 1px solid black;
+    grid-template-rows: 200px 100px 50px 450px;
+    border: 2px solid black;
     margin: 25px 0px;
+    font-family: 'Acme', sans-serif;
 }
 
 #scoreBoard {
@@ -82,6 +84,7 @@ body {
 .interfaceButton {
     width: 120px;
     border-radius: 15%;
+    border: 2px solid black;
 }
 
 #play {
@@ -90,6 +93,43 @@ body {
 
 #reset {
     background-color: gray;
+}
+h4 {
+    margin-left: 25px;
+}
+
+#speedButtons {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.speed {
+    border-radius: 15%;
+}
+
+#slow {
+    background-color: gray
+}
+
+#avg {
+    background-color: green
+}
+
+#fast {
+    background-color: gray
+}
+
+#faster {
+    background-color: gray
+}
+
+#rules {
+    background-color: lightgray;
+    padding: 10px;
+    height: 300px;
+    margin-top: 50px;
+    margin-inline: 25px;;
 }
 
 .snake {
@@ -113,12 +153,7 @@ body {
     transition: all 0.5s;
 }
 
-#rules {
-    background-color: lightgray;
-    margin: 25px;
-    padding: 10px;
-    height: 350px;
-}
+
 
 .deadSnake {
     box-shadow: 0px 0px 10px maroon
